# cmake_skeleton

./: .gitignore  CMakeLists.txt  CMakeSettings.json
module1/: CMakeLists.txt
project_name/: CMakeLists.txt
project_name/main/: CMakeLists.txt
project_name/module1/: CMakeLists.txt
project_name/module1/include/module1/: Dummy.h
project_name/tests/: CMakeLists-gtest.txt  CMakeLists.txt
project_name/tests/module1_tests/: CMakeLists.txt  test1.cpp
src/module1/: CMakeLists.txt
src/module1/src/: Dummy.cpp
tests/: CMakeLists-gtest.txt  CMakeLists.txt
tests/module1_tests/: CMakeLists.txt
